--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.12.4",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
+    "pixelarticons": "^1.8.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.9.4",
+    "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
