--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.12.4",
@@ -30,6 +31,7 @@
     "pixelarticons": "^1.8.0",
     "radix-ui": "^1.4.3",
     "react": "^19.1.0",
+    "react-chessboard": "^5.7.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.65.0",
     "react-redux": "^9.2.0",
