--- a/Client/package.json
+++ b/Client/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
+    "stockfish.wasm": "^0.10.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
