--- a/Server/package.json
+++ b/Server/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.19.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "stockfish": "^17.1.0"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
