--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
+
+# Environment variables
+*.env
 *.local
+
+# Allow these specific files (they only contain port URLs, not secrets)
+!.env.production
+!.env.development
 
 # Editor directories and files
 .vscode/*
