--- a/Client/tsconfig.app.json
+++ b/Client/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "src/pages/Home/Home.tsx"]
+  "include": ["src", "src/pages/Home/Home.page.tsx"]
 }
