--- a/Client/package.json
+++ b/Client/package.json
@@ -20,7 +20,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.12.2",
+    "canvas-confetti": "^1.9.4",
     "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
