--- a/Server/package.json
+++ b/Server/package.json
@@ -24,9 +24,11 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
-    "stockfish": "^17.1.0"
+    "stockfish": "^17.1.0",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
