--- a/Server/package.json
+++ b/Server/package.json
@@ -28,6 +28,7 @@
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.11",
     "stockfish": "^17.1.0",
     "validator": "^13.15.23"
   },
