--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +35,11 @@
     "validator": "^13.15.23"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "cross-env": "^10.1.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-n": "^17.23.1",
+    "globals": "^16.5.0",
     "nodemon": "^3.1.10"
   }
 }
