--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "cd Client && npm install && VITE_API_BASE_URL=/api npm run build && cd ../Server && npm install && mkdir -p public && cp -r ../Client/dist/* public/",
+    "build": "cd Client && npm install && VITE_API_BASE_URL= npm run build && cd ../Server && npm install && mkdir -p public && cp -r ../Client/dist/* public/",
     "start": "cd Server && npm start"
   }
 }
