--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-query": "^5.90.19",
     "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.12.2",
     "canvas-confetti": "^1.9.4",
